// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`cmds:install - with initialized workspace and module installs a module package 1`] = `
{
  "author": "Tester <tester@example.com>",
  "bugs": {
    "url": "https://github.com/tester/my-module/issues",
  },
  "dependencies": {
    "@pgpm/base32": "0.15.1",
  },
  "description": "my-module",
  "devDependencies": {
    "makage": "0.1.8",
    "pgsql-test": "^2.16.2",
  },
  "homepage": "https://github.com/tester/my-module",
  "keywords": [],
  "license": "MIT",
  "name": "my-module",
  "publishConfig": {
    "access": "public",
    "directory": "dist",
  },
  "repository": {
    "type": "git",
    "url": "https://github.com/tester/my-module",
  },
  "scripts": {
    "lint": "eslint . --fix",
    "test": "jest",
    "test:watch": "jest --watchAll",
  },
  "version": "0.0.1",
}
`;

exports[`cmds:install - with initialized workspace and module installs a module package 2`] = `
[
  "../../extensions/@pgpm/base32/LICENSE",
  "../../extensions/@pgpm/base32/Makefile",
  "../../extensions/@pgpm/base32/README.md",
  "../../extensions/@pgpm/base32/__tests__/__snapshots__/base32.decode.test.ts.snap",
  "../../extensions/@pgpm/base32/__tests__/__snapshots__/base32.encode.test.ts.snap",
  "../../extensions/@pgpm/base32/__tests__/base32.decode.test.ts",
  "../../extensions/@pgpm/base32/__tests__/base32.encode.test.ts",
  "../../extensions/@pgpm/base32/deploy/schemas/base32/procedures/decode.sql",
  "../../extensions/@pgpm/base32/deploy/schemas/base32/procedures/encode.sql",
  "../../extensions/@pgpm/base32/deploy/schemas/base32/schema.sql",
  "../../extensions/@pgpm/base32/jest.config.js",
  "../../extensions/@pgpm/base32/package.json",
  "../../extensions/@pgpm/base32/pgpm-base32.control",
  "../../extensions/@pgpm/base32/pgpm.plan",
  "../../extensions/@pgpm/base32/revert/schemas/base32/procedures/decode.sql",
  "../../extensions/@pgpm/base32/revert/schemas/base32/procedures/encode.sql",
  "../../extensions/@pgpm/base32/revert/schemas/base32/schema.sql",
  "../../extensions/@pgpm/base32/sql/pgpm-base32--0.14.0.sql",
  "../../extensions/@pgpm/base32/verify/schemas/base32/procedures/decode.sql",
  "../../extensions/@pgpm/base32/verify/schemas/base32/procedures/encode.sql",
  "../../extensions/@pgpm/base32/verify/schemas/base32/schema.sql",
  "../../extensions/@pgpm/verify/LICENSE",
  "../../extensions/@pgpm/verify/Makefile",
  "../../extensions/@pgpm/verify/README.md",
  "../../extensions/@pgpm/verify/__tests__/ext-verify.test.ts",
  "../../extensions/@pgpm/verify/deploy/procedures/get_entity_from_str.sql",
  "../../extensions/@pgpm/verify/deploy/procedures/get_schema_from_str.sql",
  "../../extensions/@pgpm/verify/deploy/procedures/list_indexes.sql",
  "../../extensions/@pgpm/verify/deploy/procedures/list_memberships.sql",
  "../../extensions/@pgpm/verify/deploy/procedures/verify_constraint.sql",
  "../../extensions/@pgpm/verify/deploy/procedures/verify_domain.sql",
  "../../extensions/@pgpm/verify/deploy/procedures/verify_extension.sql",
  "../../extensions/@pgpm/verify/deploy/procedures/verify_function.sql",
  "../../extensions/@pgpm/verify/deploy/procedures/verify_index.sql",
  "../../extensions/@pgpm/verify/deploy/procedures/verify_membership.sql",
  "../../extensions/@pgpm/verify/deploy/procedures/verify_policy.sql",
  "../../extensions/@pgpm/verify/deploy/procedures/verify_role.sql",
  "../../extensions/@pgpm/verify/deploy/procedures/verify_schema.sql",
  "../../extensions/@pgpm/verify/deploy/procedures/verify_security.sql",
  "../../extensions/@pgpm/verify/deploy/procedures/verify_table.sql",
  "../../extensions/@pgpm/verify/deploy/procedures/verify_table_grant.sql",
  "../../extensions/@pgpm/verify/deploy/procedures/verify_trigger.sql",
  "../../extensions/@pgpm/verify/deploy/procedures/verify_type.sql",
  "../../extensions/@pgpm/verify/deploy/procedures/verify_view.sql",
  "../../extensions/@pgpm/verify/jest.config.js",
  "../../extensions/@pgpm/verify/package.json",
  "../../extensions/@pgpm/verify/pgpm-verify.control",
  "../../extensions/@pgpm/verify/pgpm.plan",
  "../../extensions/@pgpm/verify/revert/procedures/get_entity_from_str.sql",
  "../../extensions/@pgpm/verify/revert/procedures/get_schema_from_str.sql",
  "../../extensions/@pgpm/verify/revert/procedures/list_indexes.sql",
  "../../extensions/@pgpm/verify/revert/procedures/list_memberships.sql",
  "../../extensions/@pgpm/verify/revert/procedures/verify_constraint.sql",
  "../../extensions/@pgpm/verify/revert/procedures/verify_domain.sql",
  "../../extensions/@pgpm/verify/revert/procedures/verify_extension.sql",
  "../../extensions/@pgpm/verify/revert/procedures/verify_function.sql",
  "../../extensions/@pgpm/verify/revert/procedures/verify_index.sql",
  "../../extensions/@pgpm/verify/revert/procedures/verify_membership.sql",
  "../../extensions/@pgpm/verify/revert/procedures/verify_policy.sql",
  "../../extensions/@pgpm/verify/revert/procedures/verify_role.sql",
  "../../extensions/@pgpm/verify/revert/procedures/verify_schema.sql",
  "../../extensions/@pgpm/verify/revert/procedures/verify_security.sql",
  "../../extensions/@pgpm/verify/revert/procedures/verify_table.sql",
  "../../extensions/@pgpm/verify/revert/procedures/verify_table_grant.sql",
  "../../extensions/@pgpm/verify/revert/procedures/verify_trigger.sql",
  "../../extensions/@pgpm/verify/revert/procedures/verify_type.sql",
  "../../extensions/@pgpm/verify/revert/procedures/verify_view.sql",
  "../../extensions/@pgpm/verify/sql/pgpm-verify--0.14.0.sql",
  "../../extensions/@pgpm/verify/verify/procedures/get_entity_from_str.sql",
  "../../extensions/@pgpm/verify/verify/procedures/get_schema_from_str.sql",
  "../../extensions/@pgpm/verify/verify/procedures/list_indexes.sql",
  "../../extensions/@pgpm/verify/verify/procedures/list_memberships.sql",
  "../../extensions/@pgpm/verify/verify/procedures/verify_constraint.sql",
  "../../extensions/@pgpm/verify/verify/procedures/verify_domain.sql",
  "../../extensions/@pgpm/verify/verify/procedures/verify_extension.sql",
  "../../extensions/@pgpm/verify/verify/procedures/verify_function.sql",
  "../../extensions/@pgpm/verify/verify/procedures/verify_index.sql",
  "../../extensions/@pgpm/verify/verify/procedures/verify_membership.sql",
  "../../extensions/@pgpm/verify/verify/procedures/verify_policy.sql",
  "../../extensions/@pgpm/verify/verify/procedures/verify_role.sql",
  "../../extensions/@pgpm/verify/verify/procedures/verify_schema.sql",
  "../../extensions/@pgpm/verify/verify/procedures/verify_security.sql",
  "../../extensions/@pgpm/verify/verify/procedures/verify_table.sql",
  "../../extensions/@pgpm/verify/verify/procedures/verify_table_grant.sql",
  "../../extensions/@pgpm/verify/verify/procedures/verify_trigger.sql",
  "../../extensions/@pgpm/verify/verify/procedures/verify_type.sql",
  "../../extensions/@pgpm/verify/verify/procedures/verify_view.sql",
]
`;

exports[`cmds:install - with initialized workspace and module installs a module package 3`] = `
"# my-module extension
comment = 'my-module extension'
default_version = '0.0.1'
module_pathname = '$libdir/my-module'
requires = 'pgpm-base32,pgpm-verify,plpgsql,uuid-ossp'
relocatable = false
superuser = false
"
`;

exports[`cmds:install - with initialized workspace and module installs two modules 1`] = `
{
  "author": "Tester <tester@example.com>",
  "bugs": {
    "url": "https://github.com/tester/my-module/issues",
  },
  "dependencies": {
    "@pgpm/base32": "0.15.1",
    "@pgpm/utils": "0.15.1",
  },
  "description": "my-module",
  "devDependencies": {
    "makage": "0.1.8",
    "pgsql-test": "^2.16.2",
  },
  "homepage": "https://github.com/tester/my-module",
  "keywords": [],
  "license": "MIT",
  "name": "my-module",
  "publishConfig": {
    "access": "public",
    "directory": "dist",
  },
  "repository": {
    "type": "git",
    "url": "https://github.com/tester/my-module",
  },
  "scripts": {
    "lint": "eslint . --fix",
    "test": "jest",
    "test:watch": "jest --watchAll",
  },
  "version": "0.0.1",
}
`;

exports[`cmds:install - with initialized workspace and module installs two modules 2`] = `
[
  "../../extensions/@pgpm/base32/LICENSE",
  "../../extensions/@pgpm/base32/Makefile",
  "../../extensions/@pgpm/base32/README.md",
  "../../extensions/@pgpm/base32/__tests__/__snapshots__/base32.decode.test.ts.snap",
  "../../extensions/@pgpm/base32/__tests__/__snapshots__/base32.encode.test.ts.snap",
  "../../extensions/@pgpm/base32/__tests__/base32.decode.test.ts",
  "../../extensions/@pgpm/base32/__tests__/base32.encode.test.ts",
  "../../extensions/@pgpm/base32/deploy/schemas/base32/procedures/decode.sql",
  "../../extensions/@pgpm/base32/deploy/schemas/base32/procedures/encode.sql",
  "../../extensions/@pgpm/base32/deploy/schemas/base32/schema.sql",
  "../../extensions/@pgpm/base32/jest.config.js",
  "../../extensions/@pgpm/base32/package.json",
  "../../extensions/@pgpm/base32/pgpm-base32.control",
  "../../extensions/@pgpm/base32/pgpm.plan",
  "../../extensions/@pgpm/base32/revert/schemas/base32/procedures/decode.sql",
  "../../extensions/@pgpm/base32/revert/schemas/base32/procedures/encode.sql",
  "../../extensions/@pgpm/base32/revert/schemas/base32/schema.sql",
  "../../extensions/@pgpm/base32/sql/pgpm-base32--0.14.0.sql",
  "../../extensions/@pgpm/base32/verify/schemas/base32/procedures/decode.sql",
  "../../extensions/@pgpm/base32/verify/schemas/base32/procedures/encode.sql",
  "../../extensions/@pgpm/base32/verify/schemas/base32/schema.sql",
  "../../extensions/@pgpm/utils/LICENSE",
  "../../extensions/@pgpm/utils/Makefile",
  "../../extensions/@pgpm/utils/README.md",
  "../../extensions/@pgpm/utils/__tests__/__snapshots__/utils.test.ts.snap",
  "../../extensions/@pgpm/utils/__tests__/utils.test.ts",
  "../../extensions/@pgpm/utils/deploy/schemas/utils/procedures/ensure_singleton.sql",
  "../../extensions/@pgpm/utils/deploy/schemas/utils/procedures/mask_pad.sql",
  "../../extensions/@pgpm/utils/deploy/schemas/utils/procedures/throw.sql",
  "../../extensions/@pgpm/utils/deploy/schemas/utils/schema.sql",
  "../../extensions/@pgpm/utils/jest.config.js",
  "../../extensions/@pgpm/utils/package.json",
  "../../extensions/@pgpm/utils/pgpm-utils.control",
  "../../extensions/@pgpm/utils/pgpm.plan",
  "../../extensions/@pgpm/utils/revert/schemas/utils/procedures/ensure_singleton.sql",
  "../../extensions/@pgpm/utils/revert/schemas/utils/procedures/mask_pad.sql",
  "../../extensions/@pgpm/utils/revert/schemas/utils/procedures/throw.sql",
  "../../extensions/@pgpm/utils/revert/schemas/utils/schema.sql",
  "../../extensions/@pgpm/utils/sql/pgpm-utils--0.14.0.sql",
  "../../extensions/@pgpm/utils/verify/schemas/utils/procedures/ensure_singleton.sql",
  "../../extensions/@pgpm/utils/verify/schemas/utils/procedures/mask_pad.sql",
  "../../extensions/@pgpm/utils/verify/schemas/utils/procedures/throw.sql",
  "../../extensions/@pgpm/utils/verify/schemas/utils/schema.sql",
  "../../extensions/@pgpm/verify/LICENSE",
  "../../extensions/@pgpm/verify/Makefile",
  "../../extensions/@pgpm/verify/README.md",
  "../../extensions/@pgpm/verify/__tests__/ext-verify.test.ts",
  "../../extensions/@pgpm/verify/deploy/procedures/get_entity_from_str.sql",
  "../../extensions/@pgpm/verify/deploy/procedures/get_schema_from_str.sql",
  "../../extensions/@pgpm/verify/deploy/procedures/list_indexes.sql",
  "../../extensions/@pgpm/verify/deploy/procedures/list_memberships.sql",
  "../../extensions/@pgpm/verify/deploy/procedures/verify_constraint.sql",
  "../../extensions/@pgpm/verify/deploy/procedures/verify_domain.sql",
  "../../extensions/@pgpm/verify/deploy/procedures/verify_extension.sql",
  "../../extensions/@pgpm/verify/deploy/procedures/verify_function.sql",
  "../../extensions/@pgpm/verify/deploy/procedures/verify_index.sql",
  "../../extensions/@pgpm/verify/deploy/procedures/verify_membership.sql",
  "../../extensions/@pgpm/verify/deploy/procedures/verify_policy.sql",
  "../../extensions/@pgpm/verify/deploy/procedures/verify_role.sql",
  "../../extensions/@pgpm/verify/deploy/procedures/verify_schema.sql",
  "../../extensions/@pgpm/verify/deploy/procedures/verify_security.sql",
  "../../extensions/@pgpm/verify/deploy/procedures/verify_table.sql",
  "../../extensions/@pgpm/verify/deploy/procedures/verify_table_grant.sql",
  "../../extensions/@pgpm/verify/deploy/procedures/verify_trigger.sql",
  "../../extensions/@pgpm/verify/deploy/procedures/verify_type.sql",
  "../../extensions/@pgpm/verify/deploy/procedures/verify_view.sql",
  "../../extensions/@pgpm/verify/jest.config.js",
  "../../extensions/@pgpm/verify/package.json",
  "../../extensions/@pgpm/verify/pgpm-verify.control",
  "../../extensions/@pgpm/verify/pgpm.plan",
  "../../extensions/@pgpm/verify/revert/procedures/get_entity_from_str.sql",
  "../../extensions/@pgpm/verify/revert/procedures/get_schema_from_str.sql",
  "../../extensions/@pgpm/verify/revert/procedures/list_indexes.sql",
  "../../extensions/@pgpm/verify/revert/procedures/list_memberships.sql",
  "../../extensions/@pgpm/verify/revert/procedures/verify_constraint.sql",
  "../../extensions/@pgpm/verify/revert/procedures/verify_domain.sql",
  "../../extensions/@pgpm/verify/revert/procedures/verify_extension.sql",
  "../../extensions/@pgpm/verify/revert/procedures/verify_function.sql",
  "../../extensions/@pgpm/verify/revert/procedures/verify_index.sql",
  "../../extensions/@pgpm/verify/revert/procedures/verify_membership.sql",
  "../../extensions/@pgpm/verify/revert/procedures/verify_policy.sql",
  "../../extensions/@pgpm/verify/revert/procedures/verify_role.sql",
  "../../extensions/@pgpm/verify/revert/procedures/verify_schema.sql",
  "../../extensions/@pgpm/verify/revert/procedures/verify_security.sql",
  "../../extensions/@pgpm/verify/revert/procedures/verify_table.sql",
  "../../extensions/@pgpm/verify/revert/procedures/verify_table_grant.sql",
  "../../extensions/@pgpm/verify/revert/procedures/verify_trigger.sql",
  "../../extensions/@pgpm/verify/revert/procedures/verify_type.sql",
  "../../extensions/@pgpm/verify/revert/procedures/verify_view.sql",
  "../../extensions/@pgpm/verify/sql/pgpm-verify--0.14.0.sql",
  "../../extensions/@pgpm/verify/verify/procedures/get_entity_from_str.sql",
  "../../extensions/@pgpm/verify/verify/procedures/get_schema_from_str.sql",
  "../../extensions/@pgpm/verify/verify/procedures/list_indexes.sql",
  "../../extensions/@pgpm/verify/verify/procedures/list_memberships.sql",
  "../../extensions/@pgpm/verify/verify/procedures/verify_constraint.sql",
  "../../extensions/@pgpm/verify/verify/procedures/verify_domain.sql",
  "../../extensions/@pgpm/verify/verify/procedures/verify_extension.sql",
  "../../extensions/@pgpm/verify/verify/procedures/verify_function.sql",
  "../../extensions/@pgpm/verify/verify/procedures/verify_index.sql",
  "../../extensions/@pgpm/verify/verify/procedures/verify_membership.sql",
  "../../extensions/@pgpm/verify/verify/procedures/verify_policy.sql",
  "../../extensions/@pgpm/verify/verify/procedures/verify_role.sql",
  "../../extensions/@pgpm/verify/verify/procedures/verify_schema.sql",
  "../../extensions/@pgpm/verify/verify/procedures/verify_security.sql",
  "../../extensions/@pgpm/verify/verify/procedures/verify_table.sql",
  "../../extensions/@pgpm/verify/verify/procedures/verify_table_grant.sql",
  "../../extensions/@pgpm/verify/verify/procedures/verify_trigger.sql",
  "../../extensions/@pgpm/verify/verify/procedures/verify_type.sql",
  "../../extensions/@pgpm/verify/verify/procedures/verify_view.sql",
]
`;

exports[`cmds:install - with initialized workspace and module installs two modules 3`] = `
"# my-module extension
comment = 'my-module extension'
default_version = '0.0.1'
module_pathname = '$libdir/my-module'
requires = 'pgpm-base32,pgpm-utils,pgpm-verify,plpgsql,uuid-ossp'
relocatable = false
superuser = false
"
`;
